--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "ecommerce_app",
   "description": "nest express testing",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "engines": {
-    "npm": "7.x"
+    "node": "19.0.1"
   },
   "main": "src/main.ts",
   "author": "",
