--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ecommerce_app",
   "description": "nest express testing",
+  "version": "0.0.1",
   "version": "1.0.0",
   "engines": {
     "node": "19.0.1"
