--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ STRIPE_API_SECRET_KEY=sk_test_51GsPCmCRoSW2eDLtX5RP6mQvyfYGr0DJKTrydXgvKjNjFzsc9
 STRIPE_APP_VERSION=2022-08-01
 CHECKOUT_SESSION_ID=cs_test_a1CqV5gkM0F3HsHiVRQKl6GrN3ffo0fRvBj2UeLS11pclTX5NixRPA16D4
 API_KEY =AIzaSyCV2wyztxymcWkR_BAsnyTVxEMvFN8hqJg
-PORT=3399
+PORT=git
